--- a/Programación-Python/Cuadernos/Taller_Numpy.ipynb
+++ b/Programación-Python/Cuadernos/Taller_Numpy.ipynb
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "063e4b25",
    "metadata": {},
    "outputs": [],
@@ -353,10 +353,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "a0e2c124-ca36-41a3-b615-d2c05ca4f485",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "type(a): <class 'numpy.ndarray'> \n",
+      "\n",
+      "a:\n",
+      "13\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array(13)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "a = np.array(13) #array de dimensión 0\n",
     "print(\"type(a):\", type(a), \"\\n\")\n",
@@ -366,10 +387,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "5856fb2b-922e-403b-9fbd-656767f860d9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b:\n",
+      "[1 2 3 4]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3, 4])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "b = np.array([1, 2, 3, 4]) #array de dimensión 1\n",
     "print(\"b:\", b, sep = \"\\n\")\n",
@@ -378,10 +418,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "53d19da3-2b55-4a97-b7f0-80a0bc29d794",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c:\n",
+      "[[1 2 3 4]\n",
+      " [5 6 7 8]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 3, 4],\n",
+       "       [5, 6, 7, 8]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "c = np.array([[1, 2, 3, 4], [5, 6, 7, 8]]) #array de dimensión 2\n",
     "print(\"c:\", c, sep = \"\\n\")\n",
@@ -390,10 +451,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "2784cd52-ade7-4ec2-a95f-365566d9d201",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d:\n",
+      "[[[ 1  2  3  4]\n",
+      "  [ 5  6  7  8]]\n",
+      "\n",
+      " [[ 9 10 11 12]\n",
+      "  [13 14 15 16]]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ 1,  2,  3,  4],\n",
+       "        [ 5,  6,  7,  8]],\n",
+       "\n",
+       "       [[ 9, 10, 11, 12],\n",
+       "        [13, 14, 15, 16]]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "d = np.array([[[1, 2, 3, 4], [5, 6, 7, 8]], [[9, 10, 11, 12], [13, 14, 15, 16]]]) #array de dimensión 3\n",
     "print(\"d:\", d, sep = \"\\n\")\n",
@@ -412,10 +500,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "2a60b3c5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "print(a.ndim)\n",
     "print(b.ndim)\n",
@@ -441,10 +540,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "8019beb0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a = 13\n",
+      "b[2] =  3\n",
+      "c[1] = [5 6 7 8]\n",
+      "d[1] = [[ 9 10 11 12]\n",
+      " [13 14 15 16]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"a =\", a)\n",
     "print(\"b[2] = \", b[2])\n",
@@ -454,10 +565,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "894b28ed",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a = 13\n",
+      "b[2] = 3\n",
+      "c[1,2] = 7\n",
+      "d[1,0,2] = 11\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"a =\", a)\n",
     "print(\"b[2] =\", b[2])\n",
@@ -1677,7 +1799,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.1"
   },
   "vscode": {
    "interpreter": {
