--- a/Programación-Python/Cuadernos/Taller_Numpy.ipynb
+++ b/Programación-Python/Cuadernos/Taller_Numpy.ipynb
@@ -597,10 +597,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "7a0ee1fc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2 3 4]\n",
+      "[6 7]\n",
+      "[[[13 14]]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(b[1:4]) #b = [1 2 3 4] \n",
     "print(c[1,1:3]) #c = [[1 2 3 4][5 6 7 8]] \n",
@@ -625,13 +635,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "ed2bb758",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<U7\n"
+     ]
+    }
+   ],
    "source": [
     "frutas = np.array(['Manzana', 'Naranja', 'Uva']) #cadenas\n",
-    "print(frutas.dtype)"
+    "print(frutas.dtype)\n",
+    "\n",
+    "# El <U7 es porque la cadena más larga tiene 7 caracteres"
    ]
   },
   {
@@ -644,10 +664,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "75aadc1c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<U3\n",
+      "['6' '1' '2' '4' '623' '8']\n"
+     ]
+    }
+   ],
    "source": [
     "number_to_string = np.array([6, 1, 2, 4, 623, 8], dtype=str) #b denota un string\n",
     "print(number_to_string.dtype)\n",
@@ -656,10 +685,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
+   "id": "f2f1e7c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3, 4, 5, 6])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "estratos = np.array([1, 2, 3, 4, 5, 6])\n",
+    "estratos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "id": "a1ebedf3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hay un error en su lógica\n"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
     "    error_array = np.array(['a', '2', '3'], dtype=int)\n",
@@ -677,10 +736,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "7bd6b41a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3]\n"
+     ]
+    }
+   ],
    "source": [
     "floating_array = np.array([1.1, 2.1, 3.1]) #punto flotante\n",
     "int_array = floating_array.astype(int)\n",
@@ -689,10 +756,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "63412d4a-7fee-44c1-8e4f-550b034902da",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "`vector`:\t [ 127 -127   -1    1]\n",
+      "`vector.dtype`:  int8\n",
+      "`vector`:\t [   127   -127  32767 -32767]\n",
+      "`vector.dtype`:  int16\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\stiv\\AppData\\Local\\Temp\\ipykernel_26516\\3857418225.py:1: DeprecationWarning: NumPy will stop allowing conversion of out-of-bound Python integers to integer arrays.  The conversion of 32767 to int8 will fail in the future.\n",
+      "For the old behavior, usually:\n",
+      "    np.array(value).astype(dtype)`\n",
+      "will give the desired result (the cast overflows).\n",
+      "  vector = np.array([127, -127, 32767, -32767], dtype=np.int8) # entero de 1 byte = 8 bits (1 bit se necesita para almacenar el signo)\n",
+      "C:\\Users\\stiv\\AppData\\Local\\Temp\\ipykernel_26516\\3857418225.py:1: DeprecationWarning: NumPy will stop allowing conversion of out-of-bound Python integers to integer arrays.  The conversion of -32767 to int8 will fail in the future.\n",
+      "For the old behavior, usually:\n",
+      "    np.array(value).astype(dtype)`\n",
+      "will give the desired result (the cast overflows).\n",
+      "  vector = np.array([127, -127, 32767, -32767], dtype=np.int8) # entero de 1 byte = 8 bits (1 bit se necesita para almacenar el signo)\n"
+     ]
+    }
+   ],
    "source": [
     "vector = np.array([127, -127, 32767, -32767], dtype=np.int8) # entero de 1 byte = 8 bits (1 bit se necesita para almacenar el signo)\n",
     "print('`vector`:\\t', vector)\n",
