--- a/Programación-Python/Cuadernos/py_0130_Patrones_POO.ipynb
+++ b/Programación-Python/Cuadernos/py_0130_Patrones_POO.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -138,11 +138,11 @@
      "evalue": "'CuentaBancaria' object has no attribute 'saldo'",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [5], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m cuenta \u001b[38;5;241m=\u001b[39m CuentaBancaria()\n\u001b[0;32m----> 2\u001b[0m \u001b[43mcuenta\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdeposito\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m100\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn [3], line 9\u001b[0m, in \u001b[0;36mCuentaBancaria.deposito\u001b[0;34m(self, monto)\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdeposito\u001b[39m(\u001b[38;5;28mself\u001b[39m, monto):\n\u001b[0;32m----> 9\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msaldo \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m monto\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'CuentaBancaria' object has no attribute 'saldo'"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m cuenta \u001b[39m=\u001b[39m CuentaBancaria()\n\u001b[1;32m----> 2\u001b[0m cuenta\u001b[39m.\u001b[39;49mdeposito(\u001b[39m100\u001b[39;49m)\n",
+      "Cell \u001b[1;32mIn[1], line 9\u001b[0m, in \u001b[0;36mCuentaBancaria.deposito\u001b[1;34m(self, monto)\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mdeposito\u001b[39m(\u001b[39mself\u001b[39m, monto):\n\u001b[1;32m----> 9\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49msaldo \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m monto\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'CuentaBancaria' object has no attribute 'saldo'"
      ]
     }
    ],
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,14 +199,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "María 151348 0 2022-08-14\n"
+      "María 151348 0 2023-08-05\n"
      ]
     }
    ],
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,14 +317,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "María 151148 0 2022-10-21\n"
+      "MarÃ­a 151148 0 2023-08-05\n"
      ]
     }
    ],
@@ -337,14 +337,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "María 151348 0 2022-10-21\n"
+      "María 151348 0 2023-08-05\n"
      ]
     }
    ],
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +379,7 @@
        "False"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +450,7 @@
        "True"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -606,17 +606,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "Este es el resultado."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +625,7 @@
       "          Cuenta Bancaria:\n",
       "          Propietario de la cuenta: María\n",
       "          Número de cuenta: 151148\n",
-      "          Fecha de creación: 2022-08-16\n",
+      "          Fecha de creación: 2023-08-05\n",
       "          Saldo actual: 0\n",
       "          \n"
      ]
@@ -638,7 +636,7 @@
        "\"CuentaBancaria(cliente='María', numero_cuenta=151148, saldo=0)\""
       ]
      },
-     "execution_count": 39,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -665,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -729,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -740,7 +738,7 @@
       "          Cuenta Bancaria:\n",
       "          Propietario de la cuenta: María\n",
       "          Número de cuenta: 151148\n",
-      "          Fecha de creación: 2022-08-16\n",
+      "          Fecha de creación: 2023-08-05\n",
       "          Saldo actual: 0\n",
       "          \n"
      ]
@@ -751,7 +749,7 @@
        "\"CuentaBancaria(cliente='María', numero_cuenta=151148, saldo=0)\""
       ]
      },
-     "execution_count": 41,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -788,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -852,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -863,7 +861,7 @@
       "          Cuenta Bancaria:\n",
       "          Propietario de la cuenta: María\n",
       "          Número de cuenta: 151148\n",
-      "          Fecha de creación: 2022-10-21\n",
+      "          Fecha de creación: 2023-08-05\n",
       "          Saldo actual: 0\n",
       "          \n"
      ]
@@ -873,10 +871,10 @@
      "evalue": "'CuentaBancaria' object has no attribute '__MIN_SALDO'",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [29], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(mi_cuenta)\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mrepr\u001b[39m(mi_cuenta)\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mmi_cuenta\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m__MIN_SALDO\u001b[49m)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'CuentaBancaria' object has no attribute '__MIN_SALDO'"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[23], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[39mprint\u001b[39m(mi_cuenta)\n\u001b[0;32m      3\u001b[0m \u001b[39mrepr\u001b[39m(mi_cuenta)\n\u001b[1;32m----> 4\u001b[0m \u001b[39mprint\u001b[39m(mi_cuenta\u001b[39m.\u001b[39;49m__MIN_SALDO)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'CuentaBancaria' object has no attribute '__MIN_SALDO'"
      ]
     }
    ],
@@ -903,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -947,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1011,11 +1009,7 @@
     "    \n",
     "    @property\n",
     "    def saldo(self):\n",
-    "        return self._saldo\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    "
+    "        return self._saldo"
    ]
   },
   {
@@ -1027,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1038,7 +1032,7 @@
       "          Cuenta Bancaria:\n",
       "          Propietario de la cuenta: María\n",
       "          Número de cuenta: 151148\n",
-      "          Fecha de creación: 2022-08-16\n",
+      "          Fecha de creación: 2023-08-05\n",
       "          Saldo actual: 0\n",
       "          \n"
      ]
@@ -1049,7 +1043,7 @@
        "\"CuentaBancaria(cliente='María', numero_cuenta=151148, saldo=0)\""
       ]
      },
-     "execution_count": 83,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1069,18 +1063,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "ename": "AttributeError",
-     "evalue": "can't set attribute",
+     "evalue": "property 'saldo' of 'CuentaBancaria' object has no setter",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-84-006ff73a9363>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmi_cuenta\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msaldo\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m100\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: can't set attribute"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[27], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m mi_cuenta\u001b[39m.\u001b[39;49msaldo \u001b[39m=\u001b[39m \u001b[39m100\u001b[39m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: property 'saldo' of 'CuentaBancaria' object has no setter"
      ]
     }
    ],
@@ -1089,17 +1083,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "Este funcionamiento estaría bien por ejemplo para número de cuenta y fecha de creación"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1108,18 +1100,18 @@
        "151148"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mi_cuenta.numero_cuenta\n"
+    "mi_cuenta.numero_cuenta"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1128,7 +1120,7 @@
        "\"CuentaBancaria(cliente='María', numero_cuenta=151148, saldo=0)\""
       ]
      },
-     "execution_count": 31,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1153,7 +1145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1229,7 +1221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1240,7 +1232,7 @@
       "          Cuenta Bancaria:\n",
       "          Propietario de la cuenta: María\n",
       "          Número de cuenta: 151148\n",
-      "          Fecha de creación: 2022-10-21\n",
+      "          Fecha de creación: 2023-08-05\n",
       "          Saldo actual: 0\n",
       "          \n"
      ]
@@ -1251,7 +1243,7 @@
        "\"CuentaBancaria(cliente='María', numero_cuenta=151148, saldo=0)\""
       ]
      },
-     "execution_count": 33,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1264,7 +1256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1275,7 +1267,7 @@
       "          Cuenta Bancaria:\n",
       "          Propietario de la cuenta: María\n",
       "          Número de cuenta: 151148\n",
-      "          Fecha de creación: 2022-10-21\n",
+      "          Fecha de creación: 2023-08-05\n",
       "          Saldo actual: 500\n",
       "          \n"
      ]
@@ -1296,11 +1288,11 @@
      "evalue": "¡Saldo muy pequeño!",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [35], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mmi_cuenta\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msaldo\u001b[49m \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m15_000\u001b[39m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(mi_cuenta)\n",
-      "Cell \u001b[0;32mIn [32], line 66\u001b[0m, in \u001b[0;36mCuentaBancaria.saldo\u001b[0;34m(self, nuevo_saldo)\u001b[0m\n\u001b[1;32m     63\u001b[0m \u001b[38;5;129m@saldo\u001b[39m\u001b[38;5;241m.\u001b[39msetter\n\u001b[1;32m     64\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21msaldo\u001b[39m(\u001b[38;5;28mself\u001b[39m, nuevo_saldo):\n\u001b[1;32m     65\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m nuevo_saldo \u001b[38;5;241m<\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m__MIN_SALDO:\n\u001b[0;32m---> 66\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m¡Saldo muy pequeño!\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     67\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     68\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_saldo \u001b[38;5;241m=\u001b[39m nuevo_saldo\n",
-      "\u001b[0;31mValueError\u001b[0m: ¡Saldo muy pequeño!"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[35], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m mi_cuenta\u001b[39m.\u001b[39;49msaldo \u001b[39m=\u001b[39m \u001b[39m-\u001b[39m\u001b[39m15_000\u001b[39m\n\u001b[0;32m      2\u001b[0m \u001b[39mprint\u001b[39m(mi_cuenta)\n",
+      "Cell \u001b[1;32mIn[31], line 66\u001b[0m, in \u001b[0;36mCuentaBancaria.saldo\u001b[1;34m(self, nuevo_saldo)\u001b[0m\n\u001b[0;32m     63\u001b[0m \u001b[39m@saldo\u001b[39m\u001b[39m.\u001b[39msetter\n\u001b[0;32m     64\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39msaldo\u001b[39m(\u001b[39mself\u001b[39m, nuevo_saldo):\n\u001b[0;32m     65\u001b[0m     \u001b[39mif\u001b[39;00m nuevo_saldo \u001b[39m<\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m__MIN_SALDO:\n\u001b[1;32m---> 66\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39m¡Saldo muy pequeño!\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     67\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[0;32m     68\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_saldo \u001b[39m=\u001b[39m nuevo_saldo\n",
+      "\u001b[1;31mValueError\u001b[0m: ¡Saldo muy pequeño!"
      ]
     }
    ],
@@ -1523,7 +1515,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.11.1"
   }
  },
  "nbformat": 4,
