--- a/Programación-Python/Cuadernos/py_0110_POO.ipynb
+++ b/Programación-Python/Cuadernos/py_0110_POO.ipynb
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,16 +288,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<__main__.Usuario at 0x2680ba74810>"
+       "<__main__.Usuario at 0x19416491a10>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +409,7 @@
        "'Aprendizaje'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +448,7 @@
        "34"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +470,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[14], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m# u1 no tiene edad asginada\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m u1\u001b[39m.\u001b[39;49medad\n",
+      "Cell \u001b[1;32mIn[8], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m# u1 no tiene edad asginada\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m u1\u001b[39m.\u001b[39;49medad\n",
       "\u001b[1;31mAttributeError\u001b[0m: 'Usuario' object has no attribute 'edad'"
      ]
     }
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -750,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -806,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -842,14 +842,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Thomas Anderson  tiene 60 años\n"
+      "Thomas Anderson  tiene 61 años\n"
      ]
     }
    ],
@@ -878,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -920,14 +920,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Thomas Anderson  tiene 60 años\n",
+      "Thomas Anderson  tiene 61 años\n",
       "1\n",
       "2\n"
      ]
@@ -958,14 +958,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Agente Smith  tiene 12 años\n"
+      "Agente Smith  tiene 13 años\n"
      ]
     }
    ],
@@ -983,15 +983,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Thomas Anderson  tiene 60 años\n",
-      "Thomas Anderson  tiene 60 años\n"
+      "Thomas Anderson  tiene 61 años\n",
+      "Thomas Anderson  tiene 61 años\n"
      ]
     }
    ],
@@ -1010,15 +1010,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Thomas Anderson  tiene 82 años\n",
-      "Thomas Anderson  tiene 82 años\n"
+      "Thomas Anderson  tiene 83 años\n",
+      "Thomas Anderson  tiene 83 años\n"
      ]
     }
    ],
@@ -1037,15 +1037,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Thomas Anderson  tiene 82 años\n",
-      "Thomas Anderson  tiene 62 años\n"
+      "Thomas Anderson  tiene 83 años\n",
+      "Thomas Anderson  tiene 63 años\n"
      ]
     }
    ],
@@ -1074,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1082,10 +1082,10 @@
      "evalue": "name 'px' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mdel\u001b[39;00m px\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(px)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'px' is not defined"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[23], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39mdel\u001b[39;00m px\n\u001b[1;32m----> 2\u001b[0m \u001b[39mprint\u001b[39m(px)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'px' is not defined"
      ]
     }
    ],
@@ -1153,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1172,7 +1172,7 @@
       "    Pero pronto tendremos mucho más que eso.\n",
       "\n",
       "Diccionario de la clase: \n",
-      " {'__module__': '__main__', '__doc__': 'Un usuario de nuestra plataforma. Por ahora\\n    sólo recolectamos nombre y cumpleaños.\\n    Pero pronto tendremos mucho más que eso.', '__init__': <function Usuario.__init__ at 0x7f223bc63ac0>, 'edad': <function Usuario.edad at 0x7f222189a200>, '__str__': <function Usuario.__str__ at 0x7f2221899000>, '__call__': <function Usuario.__call__ at 0x7f22218992d0>, '__dict__': <attribute '__dict__' of 'Usuario' objects>, '__weakref__': <attribute '__weakref__' of 'Usuario' objects>}\n",
+      " {'__module__': '__main__', '__doc__': 'Un usuario de nuestra plataforma. Por ahora\\n    sólo recolectamos nombre y cumpleaños.\\n    Pero pronto tendremos mucho más que eso.', '__init__': <function Usuario.__init__ at 0x0000019417C51260>, 'edad': <function Usuario.edad at 0x0000019417C51300>, '__str__': <function Usuario.__str__ at 0x0000019417C50CC0>, '__call__': <function Usuario.__call__ at 0x0000019417C514E0>, '__dict__': <attribute '__dict__' of 'Usuario' objects>, '__weakref__': <attribute '__weakref__' of 'Usuario' objects>, '__slotnames__': []}\n",
       "\n",
       "Clases Base:  (<class 'object'>,)\n",
       "\n",
@@ -1180,7 +1180,7 @@
       "\n",
       "Clase:  <class '__main__.Usuario'>\n",
       "\n",
-      " Diccionario:  {'nombre_c': 'Thomas Anderson', 'fecha_nacimiento': '19620311', 'llamadas': 2, 'nombre': 'Thomas', 'apellido': 'Anderson'}\n"
+      " Diccionario:  {'nombre_c': 'Thomas Anderson', 'fecha_nacimiento': '19600311', 'llamadas': 2, 'nombre': 'Thomas', 'apellido': 'Anderson'}\n"
      ]
     }
    ],
@@ -1214,7 +1214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1224,7 +1224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1263,6 +1263,11 @@
       " |  \n",
       " |  __weakref__\n",
       " |      list of weak references to the object (if defined)\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data and other attributes inherited from Usuario:\n",
+      " |  \n",
+      " |  __slotnames__ = []\n",
       "\n"
      ]
     }
@@ -1280,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1313,7 +1318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1326,7 +1331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1342,10 +1347,10 @@
      "evalue": "'Lector' object has no attribute 'llamadas'",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [15], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(l\u001b[38;5;241m.\u001b[39mnombre_c)\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(l\u001b[38;5;241m.\u001b[39medad())\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43ml\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mllamadas\u001b[49m)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Lector' object has no attribute 'llamadas'"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[29], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[39mprint\u001b[39m(l\u001b[39m.\u001b[39mnombre_c)\n\u001b[0;32m      3\u001b[0m \u001b[39mprint\u001b[39m(l\u001b[39m.\u001b[39medad())\n\u001b[1;32m----> 4\u001b[0m \u001b[39mprint\u001b[39m(l\u001b[39m.\u001b[39;49mllamadas)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'Lector' object has no attribute 'llamadas'"
      ]
     }
    ],
@@ -1384,7 +1389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1397,9 +1402,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Daniel Montenegro\n",
+      "32\n",
+      "Jack Kerouac\n",
+      "Daniel Montenegro  tiene 32 años\n"
+     ]
+    }
+   ],
    "source": [
     "l=Lector(\"Daniel Montenegro\",\"19901026\",\"Jack Kerouac\")\n",
     "print(l.nombre_c)\n",
